samples/_failures_safe/1761320147_06f493_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0178ca88.c: In function ‘main’:
./samples/SAFE/__tmp_0178ca88.c:152:12: error: expected identifier or ‘(’ at end of input
  152 |     struct Graph*
      |            ^~~~~
./samples/SAFE/__tmp_0178ca88.c:152:12: error: expected declaration or statement at end of input
